style.css
/* ... */
footer p {
    width: 50%;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.2rem;
    font-weight: 100;
    opacity: 0.8;
    margin-bottom: 50px;
}

.socials {
    display: flex;
    gap: 10px;
    padding-bottom: 20px;
}

.socials img {
    width: 30px;
}

.footer-info {
    display: flex;
    border-top: white 2px solid;
    padding-top: 20px;
    justify-content: space-between;
    font-family: Arial, Helvetica, sans-serif;
}

.footer-info h4 {
    font-weight: 100;
}

.footer-info h4 span {
    font-weight: 600;
}

.footer-info a {
    text-decoration: none;
    color: white;
}

.footer-info a span {
    color: var(--orange);
}

/* ---------------------------------------------- For tab -------------------------------------------- */

@media (max-width: 1023px) {
    .container {
        width: 400vw;
    }

    .card-img {
        width: 100%;
        height: 250px;
    }

    .card-footer .main-button {
        width: 100%;
        text-align: center;
    }

    #why-choose-us p {
        padding: 10px 0;
    }

    #why-choose-us a {
        margin: 30px 0;
    }

    #why-choose-us {
        padding: 100px 5vw;
    }

    .testi-div {
        padding: 80px 50px;
    }

    footer p {
        width: 100%;
    }

    #about-me {
        grid-template-columns: repeat(2, 1fr);
    }

    #empty-div {
        display: none;
    }

}

@media (max-width: 768px) {


    #about-me div {
        width: 46vw;
    }

    #empty-div {
        display: none;
    }

    .cta h1 {
        margin-bottom: 10px;
        line-height: 1;
        overflow: visible;
    }

    #testimonials {
        grid-template-columns: repeat(2, 1fr);
    }

    .testi-div {
        padding: 50px 30px;
    }

    #testimonials .sec-heading {
        padding: 30px;
        font-size: clamp(2.5rem, 4vw, 5rem);
    }

    footer .logo {
        font-size: clamp(5rem, 6vw, 10rem);
        position: static;
        margin-bottom: 20px;
    }

    footer {
        padding: 50px;
    }
}

@media (max-width: 580px) {
    .cta h1 {
        font-size: clamp(3rem, 20vw, 8rem);
    }

    .cta p {
        font-size: clamp(1rem, 5vw, 4rem);
    }

    .container {
        width: 1000vw;
    }

    #featured-properties .heading a {
        text-align: right;
        width: fit-content;
        display: none;
    }

    .grid {
        grid-template-columns: 1fr 1fr;
        padding: 10px 10px;
    }

    .card-title {
        font-size: clamp(1.8rem, 2vw, 4rem);
        font-weight: 500;
        color: #111;
        margin-bottom: 6px;
        font-family: Helvetica, Arial, sans-serif;
    }

    .card-footer {
        margin-top: 10px;
    }

    .filter-tab {
        padding: 8px 18px;
        border-radius: 6px;
        font-size: 1.4rem;
    }

    .filter-tabs {
        margin-bottom: 20px;
    }

    #why-choose-us {
        padding: 100px 10px;
    }

    .trust-icons {
        width: 100%;
        gap: 20px;
        justify-content: space-around;
        text-align: center;
    }

    .trusted-badge {
        font-size: 1.5rem;
        width: 40%;
    }

    #about-me {
        padding: 150px 20px;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 10px;
    }

    #about-me .right-div h3 {
        font-size: 1.3rem;
        font-family: Helvetica, Arial, sans-serif;
        margin-top: 0;
    }

    #about-me {
        padding: 50px 20px;
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        gap: 10px;
    }

    #about-me div {
        width: 100%;
    }

    #about-me .right-div h3 {
        margin-bottom: 20px;
    }

    #about-me .right-div div {
        gap: 20px;
    }

    #hero-section {
        height: 65vh;
    }
}

@media (max-width: 430px) {
    #featured-properties .heading {
        margin-top: 20px;
    }

    .grid-wrapper {
        margin-top: 0;
        padding: 0;
    }

    .grid {
        grid-template-columns: 1fr 1fr;
        padding: 10px 10px;
        gap: 10px;
        padding-bottom: 30px;
    }

    .card {
        padding: 5px;
    }

    .card-img {
        height: 170px;
    }

    .card-title {
        font-size: clamp(1.5rem, 2vw, 4rem);
    }

    .card-footer .main-button {
        font-size: 1.2rem;
        font-weight: 700;
        padding: 10px 20px;
    }

    .card-body {
        padding-bottom: 0;
    }

    .price {
        font-size: clamp(1.5rem, 2.2vw, 4.3rem);
    }

    #image-slideshows .trail-hint {
        text-align: center;
    }

    #shop-by-categories {
        margin: 30px 0;
    }

    .trusted-badge {
        font-size: 1.2rem;
        width: 45%;
        overflow: visible;
    }

    .trusted-badge img {
        width: 20%;
    }

    .trusted-badge div {
        width: 80%;
    }

    #testimonials {
        grid-template-columns: 1fr;
    }

    .testi-div {
        padding: 30px 40px;
        padding-bottom: 80px;
    }

    #testimonials .sec-heading {
        background-color: rgb(214, 214, 214);
        border: 2px white solid;
        font-weight: 600;
    }

    footer .logo {
        font-size: clamp(3rem, 6vw, 10rem);
        position: static;
        margin-bottom: 20px;
    }

    #featured-properties .heading {
        padding: 0 10px;
    }

    .card-location {
        width: 100%;
    }

    .card-location div {
        width: 10%;
    }

    .card-location img {
        width: 100%;
        height: auto;
        display: block;
    }

    .card-location h3 {
        width: 80%;
        font-weight: 500;
        font-size: clamp(1rem, 1.5vw, 1.3rem);
    }

    .footer-info {
        flex-direction: column;
    }

    #hero-section {
        padding: 0 10px;
    }

    .cta {
        padding: 0 25px;
    }

    nav {
        padding: 15px 10px;
    }

}

